// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTable As Admin 1`] = `
<div
  className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
>
  <div
    className="overflow-x-auto w-full"
  >
    <table
      className="min-w-full text-sm text-left"
      data-test="MembreListTable"
    >
      <thead>
        <tr>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Nom et adresse mail
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Champ d'intervention
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Détails fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            <div
              className="flex items-center"
            >
              Accès
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yolo@dodo.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dodo
               
              Yolo
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yolo@dodo.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="fonction-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Référent·e
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <div
              data-test="champ_intervention-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto flex flex-col"
                >
                  <span>
                    Climat Air Énergie
                  </span>
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              className="py-1 px-2 border border-gray-300"
            >
              <textarea
                className=" w-60 resize-none"
                data-test="details_fonction-textarea"
                onChange={[Function]}
                onMouseOut={[Function]}
                value="Cheffe de projet PCAET"
              />
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Admin
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yala@dada.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dada
               
              Yala
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yala@dada.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="fonction-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Équipe technique
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <div
              data-test="champ_intervention-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto flex flex-col"
                >
                  <span>
                    Climat Air Énergie
                  </span>
                  <span>
                    Économie Circulaire
                  </span>
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              className="py-1 px-2 border border-gray-300"
            >
              <textarea
                className=" w-60 resize-none"
                data-test="details_fonction-textarea"
                onChange={[Function]}
                onMouseOut={[Function]}
                value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
              />
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Édition
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-john@doe.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Doe
               
              John
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              john@doe.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="fonction-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Équipe politique
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <div
              data-test="champ_intervention-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto flex flex-col"
                >
                  <span>
                    Climat Air Énergie
                  </span>
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              className="py-1 px-2 border border-gray-300"
            >
              <textarea
                className=" w-60 resize-none"
                data-test="details_fonction-textarea"
                onChange={[Function]}
                onMouseOut={[Function]}
                value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
              />
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Lecture
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-invite@dodo.com"
        >
          <td
            className="relative px-4"
            colSpan={4}
          >
            <span
              className="block mb-0.5 text-xs text-gray-500"
            >
              invite@dodo.com
            </span>
            <span
              className="font-medium text-xs text-gray-600"
            >
              Création de compte en attente
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Lecture
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTable As Editeur 1`] = `
<div
  className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
>
  <div
    className="overflow-x-auto w-full"
  >
    <table
      className="min-w-full text-sm text-left"
      data-test="MembreListTable"
    >
      <thead>
        <tr>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Nom et adresse mail
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Champ d'intervention
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Détails fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            <div
              className="flex items-center"
            >
              Accès
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yolo@dodo.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dodo
               
              Yolo
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yolo@dodo.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Référent·e
            </span>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <span
              className="block"
            >
              Climat Air Énergie
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span
              className="w-72 line-clamp-3"
              title="Cheffe de projet PCAET"
            >
              Cheffe de projet PCAET
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Admin
            </span>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yala@dada.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dada
               
              Yala
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yala@dada.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="fonction-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Équipe technique
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <div
              data-test="champ_intervention-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto flex flex-col"
                >
                  <span>
                    Climat Air Énergie
                  </span>
                  <span>
                    Économie Circulaire
                  </span>
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              className="py-1 px-2 border border-gray-300"
            >
              <textarea
                className=" w-60 resize-none"
                data-test="details_fonction-textarea"
                onChange={[Function]}
                onMouseOut={[Function]}
                value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
              />
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Édition
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-john@doe.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Doe
               
              John
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              john@doe.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Équipe politique
            </span>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <span
              className="block"
            >
              Climat Air Énergie
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span
              className="w-72 line-clamp-3"
              title="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
            >
              Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Lecture
            </span>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-invite@dodo.com"
        >
          <td
            className="relative px-4"
            colSpan={4}
          >
            <span
              className="block mb-0.5 text-xs text-gray-500"
            >
              invite@dodo.com
            </span>
            <span
              className="font-medium text-xs text-gray-600"
            >
              Création de compte en attente
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Lecture
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTable As Lecteur 1`] = `
<div
  className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
>
  <div
    className="overflow-x-auto w-full"
  >
    <table
      className="min-w-full text-sm text-left"
      data-test="MembreListTable"
    >
      <thead>
        <tr>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Nom et adresse mail
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Champ d'intervention
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Détails fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            <div
              className="flex items-center"
            >
              Accès
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yolo@dodo.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dodo
               
              Yolo
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yolo@dodo.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Référent·e
            </span>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <span
              className="block"
            >
              Climat Air Énergie
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span
              className="w-72 line-clamp-3"
              title="Cheffe de projet PCAET"
            >
              Cheffe de projet PCAET
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Admin
            </span>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-yala@dada.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Dada
               
              Yala
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              yala@dada.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Équipe technique
            </span>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <span
              className="block"
            >
              Climat Air Énergie
            </span>
            <span
              className="block"
            >
              Économie Circulaire
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span
              className="w-72 line-clamp-3"
              title="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
            >
              Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Édition
            </span>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-john@doe.com"
        >
          <td
            className="relative px-4"
          >
            <span
              className="font-bold"
            >
              Doe
               
              John
            </span>
            <span
              className="block mt-1 text-xs text-gray-500"
            >
              john@doe.com
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="fonction-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Équipe politique
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4 pr-0"
          >
            <div
              data-test="champ_intervention-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto flex flex-col"
                >
                  <span>
                    Climat Air Énergie
                  </span>
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              className="py-1 px-2 border border-gray-300"
            >
              <textarea
                className=" w-60 resize-none"
                data-test="details_fonction-textarea"
                onChange={[Function]}
                onMouseOut={[Function]}
                value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
              />
            </div>
          </td>
          <td
            className="relative px-4"
          >
            <div
              data-test="acces-dropdown"
            >
              <button
                aria-label="ouvrir le menu"
                className="flex items-center w-full p-2 -ml-2 text-left text-sm"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onPointerDown={[Function]}
              >
                <span
                  className="mr-auto"
                >
                  Lecture
                </span>
                <span
                  className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 "
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="h-20 border-b border-gray-300 bg-white"
          data-test="MembreRow-invite@dodo.com"
        >
          <td
            className="relative px-4"
            colSpan={4}
          >
            <span
              className="block mb-0.5 text-xs text-gray-500"
            >
              invite@dodo.com
            </span>
            <span
              className="font-medium text-xs text-gray-600"
            >
              Création de compte en attente
            </span>
          </td>
          <td
            className="relative px-4"
          >
            <span>
              Lecture
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTable Empty 1`] = `
<div
  className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
>
  <div
    className="overflow-x-auto w-full"
  >
    <table
      className="min-w-full text-sm text-left"
      data-test="MembreListTable"
    >
      <thead>
        <tr>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Nom et adresse mail
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Champ d'intervention
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Détails fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            <div
              className="flex items-center"
            >
              Accès
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="bg-white"
        >
          <td
            className="pt-6 pb-24 px-6"
            colSpan={6}
          >
            Personne n'est rattaché à cette collectivité
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTable Is Loading 1`] = `
<div
  className="mx-auto border-8 border-t-0 border-bf925 bg-bf925 rounded-lg overflow-x-hidden"
>
  <div
    className="overflow-x-auto w-full"
  >
    <table
      className="min-w-full text-sm text-left"
      data-test="MembreListTable"
    >
      <thead>
        <tr>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Nom et adresse mail
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Champ d'intervention
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            Détails fonction
             
            <span
              className="block text-xs font-normal"
            >
              dans cette collectivité
            </span>
          </th>
          <th
            className="py-3 px-5 whitespace-nowrap"
          >
            <div
              className="flex items-center"
            >
              Accès
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="bg-white"
          data-test="Loading"
        >
          <td
            className="pt-6 pb-24 px-6"
            colSpan={6}
          >
            Chargement...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
